; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-memcache.c_free_chunks.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-memcache.c_free_chunks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_mem_cache_client = type { i32, i32, i32, %struct.page_list* }
%struct.page_list = type { %struct.page_list* }
%struct.dm_mem_cache_object = type { %struct.page_list* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dm_mem_cache_client*, %struct.dm_mem_cache_object*)* @free_chunks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_chunks(%struct.dm_mem_cache_client* %0, %struct.dm_mem_cache_object* %1) #0 {
  %3 = alloca %struct.dm_mem_cache_client*, align 8
  %4 = alloca %struct.dm_mem_cache_object*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca %struct.page_list*, align 8
  %8 = alloca %struct.page_list*, align 8
  store %struct.dm_mem_cache_client* %0, %struct.dm_mem_cache_client** %3, align 8
  store %struct.dm_mem_cache_object* %1, %struct.dm_mem_cache_object** %4, align 8
  %9 = load %struct.dm_mem_cache_client*, %struct.dm_mem_cache_client** %3, align 8
  %10 = getelementptr inbounds %struct.dm_mem_cache_client, %struct.dm_mem_cache_client* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  store i32 %11, i32* %5, align 4
  %12 = load i64, i64* %6, align 8
  %13 = call i32 @local_irq_save(i64 %12)
  %14 = call i32 (...) @local_irq_disable()
  br label %15

15:                                               ; preds = %53, %2
  %16 = load i32, i32* %5, align 4
  %17 = add i32 %16, -1
  store i32 %17, i32* %5, align 4
  %18 = icmp ne i32 %16, 0
  br i1 %18, label %19, label %54

19:                                               ; preds = %15
  %20 = load %struct.dm_mem_cache_object*, %struct.dm_mem_cache_object** %4, align 8
  %21 = load i32, i32* %5, align 4
  %22 = zext i32 %21 to i64
  %23 = getelementptr inbounds %struct.dm_mem_cache_object, %struct.dm_mem_cache_object* %20, i64 %22
  %24 = getelementptr inbounds %struct.dm_mem_cache_object, %struct.dm_mem_cache_object* %23, i32 0, i32 0
  %25 = load %struct.page_list*, %struct.page_list** %24, align 8
  store %struct.page_list* %25, %struct.page_list** %8, align 8
  br label %26

26:                                               ; preds = %51, %19
  %27 = load %struct.page_list*, %struct.page_list** %8, align 8
  %28 = icmp ne %struct.page_list* %27, null
  br i1 %28, label %29, label %53

29:                                               ; preds = %26
  %30 = load %struct.page_list*, %struct.page_list** %8, align 8
  %31 = getelementptr inbounds %struct.page_list, %struct.page_list* %30, i32 0, i32 0
  %32 = load %struct.page_list*, %struct.page_list** %31, align 8
  store %struct.page_list* %32, %struct.page_list** %7, align 8
  %33 = load %struct.dm_mem_cache_client*, %struct.dm_mem_cache_client** %3, align 8
  %34 = getelementptr inbounds %struct.dm_mem_cache_client, %struct.dm_mem_cache_client* %33, i32 0, i32 1
  %35 = call i32 @spin_lock(i32* %34)
  %36 = load %struct.dm_mem_cache_client*, %struct.dm_mem_cache_client** %3, align 8
  %37 = getelementptr inbounds %struct.dm_mem_cache_client, %struct.dm_mem_cache_client* %36, i32 0, i32 3
  %38 = load %struct.page_list*, %struct.page_list** %37, align 8
  %39 = load %struct.page_list*, %struct.page_list** %8, align 8
  %40 = getelementptr inbounds %struct.page_list, %struct.page_list* %39, i32 0, i32 0
  store %struct.page_list* %38, %struct.page_list** %40, align 8
  %41 = load %struct.page_list*, %struct.page_list** %8, align 8
  %42 = load %struct.dm_mem_cache_client*, %struct.dm_mem_cache_client** %3, align 8
  %43 = getelementptr inbounds %struct.dm_mem_cache_client, %struct.dm_mem_cache_client* %42, i32 0, i32 3
  store %struct.page_list* %41, %struct.page_list** %43, align 8
  %44 = load %struct.dm_mem_cache_client*, %struct.dm_mem_cache_client** %3, align 8
  %45 = getelementptr inbounds %struct.dm_mem_cache_client, %struct.dm_mem_cache_client* %44, i32 0, i32 2
  %46 = load i32, i32* %45, align 8
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %45, align 8
  %48 = load %struct.dm_mem_cache_client*, %struct.dm_mem_cache_client** %3, align 8
  %49 = getelementptr inbounds %struct.dm_mem_cache_client, %struct.dm_mem_cache_client* %48, i32 0, i32 1
  %50 = call i32 @spin_unlock(i32* %49)
  br label %51

51:                                               ; preds = %29
  %52 = load %struct.page_list*, %struct.page_list** %7, align 8
  store %struct.page_list* %52, %struct.page_list** %8, align 8
  br label %26

53:                                               ; preds = %26
  br label %15

54:                                               ; preds = %15
  %55 = load i64, i64* %6, align 8
  %56 = call i32 @local_irq_restore(i64 %55)
  ret void
}

declare dso_local i32 @local_irq_save(i64) #1

declare dso_local i32 @local_irq_disable(...) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @local_irq_restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
